style(*): re-apply user reformatting across 1687 files (Phase 5e.5b-CFC-d-294)
Restore the user's session-wide reformatting that was accidentally
stashed by the FdmKlugeExtOUOp agent (CFC-d-285) during its mid-session
working-tree isolation step.

Stash content: 1687 files with ~86k insertions / ~100k deletions —
predominantly whitespace, import reordering (alphabetical / by package),
and javadoc paragraph reflow (~120 → narrower line length).

Conflicts on 5 files where recent agent logic changes (CFC-d-279
through CFC-d-292) overlapped with the user's reformatting were
resolved by keeping the newer logic (per user instruction "the new
stuff is more important, I can reformat again at a later time"):
- jquantlib/src/main/java/org/jquantlib/methods/finitedifferences/operators/Fdm2dBlackScholesOp.java
- jquantlib/src/main/java/org/jquantlib/pricingengines/basket/Fd2dBlackScholesVanillaEngine.java
- jquantlib/src/main/java/org/jquantlib/pricingengines/swap/DiscretizedSwap.java
- jquantlib/src/test/java/org/jquantlib/testsuite/experimental/finitedifferences/VppTest.java
- jquantlib/src/test/java/org/jquantlib/testsuite/processes/HybridHestonHullWhiteProcessTest.java

Compile + isolated tests on the affected packages confirmed clean.

Signed-off-by: Jose Moya <jlmoya@gmail.com>